fix footer alignement

--- a/export/main.css
+++ b/export/main.css
@@ -30231,6 +30231,11 @@ dialog {
   background-color: var(--titles) !important;
 }
 
+/***** FIX FOOTER *****/
+.fr-footer__content {
+  text-align: left;
+}
+
 /**** HEADER ****/
 /**** HEADER - DESKTOP SPECIFIC (width >= breakpoint) 1000 by default *****/
 .ods-front-header:not(.ods-responsive-menu--collapsed) {
